<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/activity_settings">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textUri"
        android:text="server_address"
        android:ems="10"
        android:id="@+id/serverAddress"
        android:hint="@string/primary_server_address"
        style="@style/Widget.AppCompat.EditText"
        android:selectAllOnFocus="true"
        tools:text="http://andrew-6676.ddns.net:8080"
        android:background="@color/cast_expanded_controller_text_color" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/settings"
        android:id="@+id/imageView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <Button
        android:text="@string/save"
        android:layout_height="wrap_content"
        android:id="@+id/saveSettingsBtn"
        style="@android:style/Widget.Button"
        android:visibility="visible"
        android:ellipsize="middle"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveSettingsClick" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelSettingsBtn"
        style="@android:style/Widget.Button"
        tools:ignore="RelativeOverlap"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="cancelSettingsClick" />

</RelativeLayout>